--- a/web_tax/package.json
+++ b/web_tax/package.json
@@ -17,6 +17,8 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    
+    "node-sass": "^4.9.4",
     "autoprefixer": "^7.1.2",
     "aws-sign2": "^0.7.0",
     "aws4": "^1.8.0",
