--- a/.project
+++ b/.project
@@ -45,5 +45,14 @@
 				<arguments>1.0-name-matches-true-true-dist</arguments>
 			</matcher>
 		</filter>
+		<filter>
+			<id>1542703539668</id>
+			<name>wx_tax</name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-true-true-node_modules</arguments>
+			</matcher>
+		</filter>
 	</filteredResources>
 </projectDescription>
