--- a/.project
+++ b/.project
@@ -54,5 +54,14 @@
 				<arguments>1.0-name-matches-true-true-node_modules</arguments>
 			</matcher>
 		</filter>
+		<filter>
+			<id>1544591954207</id>
+			<name>AAA/taxTableDemo</name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-true-true-node_modules</arguments>
+			</matcher>
+		</filter>
 	</filteredResources>
 </projectDescription>
